--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@ button:active { transform: scale(0.97) !important; }
 }
 
 .char { transition: color 0.1s; }
+
+.login-input {
+  width: 100%; padding: 16px 20px; font-size: 20px; font-weight: 700;
+  border-radius: 14px; border: 2px solid rgba(255,255,255,0.12);
+  background: rgba(255,255,255,0.06); color: #e0e7ff;
+  font-family: 'Nunito', sans-serif; outline: none; transition: border-color 0.2s;
+}
+.login-input:focus { border-color: rgba(99,102,241,0.5); }
+.login-input::placeholder { color: rgba(255,255,255,0.2); }
 </style>
 </head>
 <body>
@@ -46,6 +55,14 @@ button:active { transform: scale(0.97) !important; }
 <div id="app"></div>
 
 <script>
+// ─── Users ───
+// Add or change users here. Format: { username: password }
+const USERS = {
+  "dean": "dog",
+  "sara": "dog"
+};
+
+// ─── Config ───
 const RECENT_WINDOW = 10;
 const MASTERY_THRESHOLD = 75;
 const ALL_KEYS = "abcdefghijklmnopqrstuvwxyz".split("");
@@ -79,8 +96,12 @@ const FUN_FACTS = [
 
 const CHEERS = ["Amazing! 🌟","Superstar! ⭐","Go astronaut! 🚀","So fast! ⚡","On fire! 🔥","Nailed it! 🎉","Champion! 🏆","Wow! 🌈","Incredible! 💫","Yes! 🎯"];
 
+// ─── State ───
+let currentUser = null;
+let loginError = "";
+
 let S = {
-  screen:"menu", keyStats:{}, level:1, xp:0, totalXp:0,
+  screen:"login", keyStats:{}, level:1, xp:0, totalXp:0,
   target:"", typed:"", errors:new Set(),
   totalChars:0, correctChars:0, streak:0, bestStreak:0,
   startTime:null, wpm:0,
@@ -88,14 +109,55 @@ let S = {
   cheer:"", funFact:"", shakePos:-1
 };
 
-try {
-  const d = JSON.parse(localStorage.getItem("ta-save"));
-  if (d) { S.keyStats=d.k||{}; S.level=d.l||1; S.totalXp=d.x||0; }
-} catch(e) {}
-ALL_KEYS.forEach(k => { if (!S.keyStats[k]) S.keyStats[k]={a:0,e:0,r:[],m:50}; });
+function initKeyStats() {
+  const ks = {};
+  ALL_KEYS.forEach(k => { ks[k] = {a:0,e:0,r:[],m:50}; });
+  return ks;
+}
 
-function save() { try { localStorage.setItem("ta-save",JSON.stringify({k:S.keyStats,l:S.level,x:S.totalXp})); } catch(e){} }
+function saveKey() { return "ta-" + currentUser; }
 
+function loadUser(username) {
+  currentUser = username;
+  try {
+    const d = JSON.parse(localStorage.getItem(saveKey()));
+    if (d) { S.keyStats=d.k||initKeyStats(); S.level=d.l||1; S.totalXp=d.x||0; }
+    else { S.keyStats=initKeyStats(); S.level=1; S.totalXp=0; }
+  } catch(e) { S.keyStats=initKeyStats(); S.level=1; S.totalXp=0; }
+  ALL_KEYS.forEach(k => { if (!S.keyStats[k]) S.keyStats[k]={a:0,e:0,r:[],m:50}; });
+}
+
+function save() {
+  if (!currentUser) return;
+  try { localStorage.setItem(saveKey(), JSON.stringify({k:S.keyStats,l:S.level,x:S.totalXp})); } catch(e){}
+}
+
+function logout() {
+  currentUser = null;
+  loginError = "";
+  S.screen = "login";
+  S.target = ""; S.typed = "";
+  render();
+}
+
+function tryLogin() {
+  const nameInput = document.getElementById("login-name");
+  const passInput = document.getElementById("login-pass");
+  if (!nameInput || !passInput) return;
+  const name = nameInput.value.trim().toLowerCase();
+  const pass = passInput.value.trim();
+
+  if (!name || !pass) { loginError = "Please enter your name and password"; render(); return; }
+  if (!USERS[name]) { loginError = "Name not found — try again!"; render(); return; }
+  if (USERS[name] !== pass) { loginError = "Wrong password — try again!"; render(); return; }
+
+  loginError = "";
+  loadUser(name);
+  S.screen = "menu";
+  render();
+}
+
+// ─── Engine ───
 function mastery(s) {
   if(s.a===0)return 50;
   const rec=s.r.slice(-RECENT_WINDOW);
@@ -197,10 +259,39 @@ let starsHTML='<div style="position:fixed;inset:0;pointer-events:none;z-index:0"
 for(let i=0;i<50;i++){starsHTML+=`<div class="star" style="left:${(Math.random()*100).toFixed(1)}%;top:${(Math.random()*100).toFixed(1)}%;opacity:${(Math.random()*0.6+0.2).toFixed(2)};animation:twinkle ${(2+Math.random()*4).toFixed(1)}s ${(Math.random()*3).toFixed(1)}s ease-in-out infinite"></div>`;}
 starsHTML+='</div>';
 
+// ─── Render ───
 function render(){
   const app=document.getElementById("app");
   const acc=S.totalChars>0?Math.round((S.correctChars/S.totalChars)*100):100;
   const curKey=S.target[S.typed.length]?.toLowerCase();
+
+  // ── Login ──
+  if(S.screen==="login"){
+    const displayName = currentUser ? currentUser.charAt(0).toUpperCase() + currentUser.slice(1) : "";
+    app.innerHTML=`${starsHTML}
+    <div style="min-height:100vh;min-height:100dvh;display:flex;flex-direction:column;align-items:center;justify-content:center;position:relative;z-index:1;padding:24px;text-align:center">
+      <div style="animation:slideUp 0.8s ease-out;max-width:380px;width:100%">
+        <div style="font-size:80px;margin-bottom:12px;animation:float 3s ease-in-out infinite">🚀</div>
+        <h1 style="font-size:40px;font-weight:900;margin-bottom:8px;background:linear-gradient(135deg,#c7d2fe,#818cf8,#6366f1);-webkit-background-clip:text;-webkit-text-fill-color:transparent">Typing Adventure</h1>
+        <p style="font-size:18px;color:rgba(255,255,255,0.35);margin-bottom:40px;font-weight:600">Who's flying today?</p>
+
+        <div style="display:flex;flex-direction:column;gap:14px;margin-bottom:20px">
+          <input id="login-name" class="login-input" type="text" placeholder="Your name" autocomplete="off" autocapitalize="off" spellcheck="false"
+            onkeydown="if(event.key==='Enter'){document.getElementById('login-pass').focus();}">
+          <input id="login-pass" class="login-input" type="password" placeholder="Password"
+            onkeydown="if(event.key==='Enter'){tryLogin();}">
+        </div>
+
+        ${loginError ? `<div style="color:#fca5a5;font-size:16px;font-weight:700;margin-bottom:16px;animation:popIn 0.3s ease-out">${loginError}</div>` : ''}
+
+        <button onclick="tryLogin()" style="width:100%;padding:18px;font-size:22px;font-weight:800;border-radius:16px;border:none;background:linear-gradient(135deg,#6366f1,#818cf8);color:#fff;box-shadow:0 4px 24px rgba(99,102,241,0.4);margin-top:4px">Log In 🚀</button>
+      </div>
+    </div>`;
+    setTimeout(()=>document.getElementById("login-name")?.focus(),100);
+    return;
+  }
+
+  const displayName = currentUser ? currentUser.charAt(0).toUpperCase() + currentUser.slice(1) : "";
 
   // ── Menu ──
   if(S.screen==="menu"){
@@ -208,13 +299,14 @@ function render(){
     <div style="min-height:100vh;min-height:100dvh;display:flex;flex-direction:column;align-items:center;justify-content:center;position:relative;z-index:1;padding:24px;text-align:center">
       <div style="animation:slideUp 0.8s ease-out">
         <div style="font-size:80px;margin-bottom:12px;animation:float 3s ease-in-out infinite">🚀</div>
-        <h1 style="font-size:52px;font-weight:900;margin-bottom:12px;background:linear-gradient(135deg,#c7d2fe,#818cf8,#6366f1);-webkit-background-clip:text;-webkit-text-fill-color:transparent;animation:glow 3s ease-in-out infinite">Typing Adventure</h1>
-        <p style="font-size:20px;color:rgba(255,255,255,0.4);margin-bottom:56px;font-weight:600">Launch your typing skills into orbit!</p>
+        <h1 style="font-size:42px;font-weight:900;margin-bottom:6px;color:#e0e7ff">Hey, ${displayName}!</h1>
+        <p style="font-size:20px;color:rgba(255,255,255,0.4);margin-bottom:48px;font-weight:600">Ready for your next mission?</p>
         <div style="display:flex;flex-direction:column;gap:16px;align-items:center">
           <button onclick="startGame()" style="padding:18px 56px;font-size:22px;font-weight:800;border-radius:16px;border:none;background:linear-gradient(135deg,#6366f1,#818cf8);color:#fff;box-shadow:0 4px 24px rgba(99,102,241,0.4)">🚀 Start Mission</button>
           <button onclick="S.screen='stats';render()" style="padding:14px 40px;font-size:17px;font-weight:700;border-radius:12px;border:1px solid rgba(255,255,255,0.15);background:rgba(255,255,255,0.05);color:rgba(255,255,255,0.6)">📊 View Progress</button>
+          <button onclick="logout()" style="padding:10px 32px;font-size:15px;font-weight:600;border-radius:10px;border:1px solid rgba(255,255,255,0.08);background:transparent;color:rgba(255,255,255,0.25);margin-top:12px">Switch Player</button>
         </div>
-        <div style="margin-top:56px;font-size:15px;color:rgba(255,255,255,0.2)">Level ${S.level} · ${S.totalXp} XP</div>
+        <div style="margin-top:48px;font-size:15px;color:rgba(255,255,255,0.2)">Level ${S.level} · ${S.totalXp} XP</div>
       </div>
     </div>`;
     return;
@@ -242,12 +334,12 @@ function render(){
     <div style="min-height:100vh;min-height:100dvh;display:flex;flex-direction:column;align-items:center;padding:40px 24px;position:relative;z-index:1;overflow:auto">
       <div style="max-width:600px;width:100%;animation:slideUp 0.6s ease-out">
         <button onclick="S.screen='menu';render()" style="padding:10px 24px;font-size:16px;font-weight:700;border-radius:10px;border:1px solid rgba(255,255,255,0.12);background:rgba(255,255,255,0.05);color:rgba(255,255,255,0.5);margin-bottom:28px">← Back</button>
-        <h2 style="font-size:32px;font-weight:900;margin-bottom:6px">📊 Mission Report</h2>
+        <h2 style="font-size:32px;font-weight:900;margin-bottom:6px">${displayName}'s Report 📊</h2>
         <p style="color:rgba(255,255,255,0.35);margin-bottom:28px;font-size:16px">Level ${S.level} · ${practiced.length}/26 letters · ${avgM}% average</p>
         ${practiced.length===0?'<div style="text-align:center;padding:48px;color:rgba(255,255,255,0.3);font-size:18px"><div style="font-size:56px;margin-bottom:16px">🔭</div>No data yet — start a mission!</div>':`
           <div style="display:grid;grid-template-columns:repeat(auto-fill,minmax(64px,1fr));gap:10px">${grid}</div>
           <div style="margin-top:24px;text-align:center">
-            <button onclick="if(confirm('Reset all progress?')){ALL_KEYS.forEach(k=>S.keyStats[k]={a:0,e:0,r:[],m:50});S.level=1;S.totalXp=0;save();render()}" style="padding:10px 24px;font-size:14px;font-weight:700;border-radius:10px;border:1px solid rgba(239,68,68,0.2);background:transparent;color:rgba(239,68,68,0.5)">Reset Progress</button>
+            <button onclick="if(confirm('Reset all progress for ${displayName}?')){ALL_KEYS.forEach(k=>S.keyStats[k]={a:0,e:0,r:[],m:50});S.level=1;S.totalXp=0;save();render()}" style="padding:10px 24px;font-size:14px;font-weight:700;border-radius:10px;border:1px solid rgba(239,68,68,0.2);background:transparent;color:rgba(239,68,68,0.5)">Reset Progress</button>
           </div>`}
       </div>
     </div>`;
@@ -279,31 +371,28 @@ function render(){
   <input id="hi" class="hidden-input" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
   <div style="min-height:100vh;min-height:100dvh;display:flex;flex-direction:column;position:relative;z-index:1;padding:20px 24px" onclick="document.getElementById('hi').focus()">
 
-    <!-- Top bar -->
     <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
       <button onclick="S.screen='menu';render()" style="padding:8px 20px;font-size:15px;font-weight:700;border-radius:10px;border:1px solid rgba(255,255,255,0.1);background:rgba(255,255,255,0.05);color:rgba(255,255,255,0.4)">← Menu</button>
-      <div style="display:flex;gap:24px">
+      <div style="display:flex;gap:24px;align-items:center">
+        <div style="font-size:15px;font-weight:700;color:rgba(255,255,255,0.2)">${displayName}</div>
         <div class="mono" style="font-size:18px;font-weight:700;color:rgba(255,255,255,0.35)">⚡ ${S.wpm}</div>
         <div class="mono" style="font-size:18px;font-weight:700;color:rgba(255,255,255,0.35)">🎯 ${acc}%</div>
         <div class="mono" style="font-size:18px;font-weight:700;color:rgba(255,255,255,0.35)">🔥 ${S.streak}</div>
       </div>
     </div>
 
-    <!-- Progress bar -->
     <div style="width:100%;height:5px;border-radius:5px;background:rgba(255,255,255,0.06);margin-bottom:0;overflow:hidden">
       <div style="height:100%;width:${pct}%;background:linear-gradient(90deg,#6366f1,#818cf8);border-radius:5px;transition:width 0.3s ease"></div>
     </div>
 
     ${S.cheer?`<div style="text-align:center;font-size:36px;font-weight:900;color:#fbbf24;animation:popIn 0.3s ease-out;margin-top:20px">${S.cheer}</div>`:''}
 
-    <!-- Main typing area — BIG and centered -->
     <div style="flex:1;display:flex;align-items:center;justify-content:center;padding:0 4px">
       <div class="mono" style="font-size:48px;line-height:1.8;letter-spacing:4px;font-weight:700;word-break:break-word;text-align:center;max-width:720px">
         ${typingHTML}
       </div>
     </div>
 
-    <!-- Finger hint -->
     ${curKey&&FINGER_MAP[curKey]&&!S.roundComplete?`
       <div style="text-align:center;padding:12px 0">
         <span class="mono" style="font-size:20px;color:rgba(255,255,255,0.25)">
@@ -313,7 +402,6 @@ function render(){
       </div>
     `:''}
 
-    <!-- Weak keys -->
     ${weak.length>0&&!S.roundComplete?`
       <div style="text-align:center;padding:4px 0 12px">
         <span style="font-size:14px;color:rgba(255,255,255,0.15)">Practicing: </span>
@@ -321,7 +409,6 @@ function render(){
       </div>
     `:''}
 
-    <!-- Round complete modal -->
     ${S.roundComplete?`
       <div style="position:fixed;inset:0;background:rgba(0,0,0,0.65);display:flex;align-items:center;justify-content:center;z-index:10;padding:24px" onclick="event.stopPropagation()">
         <div style="background:linear-gradient(135deg,#1a1145,#0d1b2a);border-radius:28px;border:1px solid rgba(99,102,241,0.3);padding:44px;text-align:center;max-width:440px;width:100%;animation:slideUp 0.5s ease-out">
